# NutriWeb

./: .gitignore  README.md  additives.ipynb  app.py  dashboard.html  open_food_facts.ipynb  pyproject.toml  requirements.txt
data/: complete_data_sample.csv
images/: images
modules/: allergens.py  fuzzy_standardize.py
nutriweb/: data_loader.py  main.py  personalization.py  recommendations.py  scoring.py
templates/: index.html  recommendations.html
